hw6 after update
it is good :)

--- a/DaliaAlotaibi/week6/index.html
+++ b/DaliaAlotaibi/week6/index.html
@@ -8,12 +8,8 @@
 <body>
   <button id="showimage">Click here to view list of images ^_^ </button>
   <button id="hideimage">Click here to hide list of images ^_^ </button>
-  <ul>
-    <li><img src="img/beagle.jpg"></li>
-    <li><img src="img/bunny.jpg"></li>
-    <li><img src="img/cat.jpg"></li>
-    <li><img src="img/iguana.jpg"></li>
-    <li><img src="img/pony.jpg"></li>
+  <ul class="listpets">
+    
   </ul>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="js/main.js"></script>
